# Concurrent_Datastructures

./: .jenkins_script.sh  .travis.yml  .travis.yml~  Placeholder.hs  Placeholder.hs.orig  Placeholder.hs~  README.md  README.md~  TestHelpers.hs~  concurrent-hashtable.cabal  concurrent-hashtable.cabal.orig  concurrent-hashtable.cabal~  datastructurePrototype.hs  datastructurePrototype.hs~  log.md  log.txt  proposal.txt  proposal.txt~  test.hs  test.hs~  test2.hs  test2.hs.orig  test2.hs~
Data/: LockFreeWaitFreeHashTable.hs  Placeholder.hs
Data/Atomics/: wrapper.hs  wrapper.hs~
Data/HashTable/: Concurrent.hs  Concurrent.hs~
tests/: benchmark1.hs  test2.hs  test2.hs~  test3.hs  test3.hs~
